# s1_budget_forcing

./: PROJECT_BRIEF.md  README.md  kaggle-run.ipynb  kaggle_run.ipynb  project_plan_s1_budget_forcing.md  pyproject.toml  requirements.txt  s1. Simple Test-Time Scaling Analysis.md
docs/: brainstorm.md  phase-2-4-taskboard.md
docs/sprint-1/: agent-a-handoff.md  agent-b-handoff.md  done.md  plan.md  progress.md
docs/sprint-2/: agent-a-handoff.md  agent-b-handoff.md  plan.md  progress.md
docs/sprint-3/: agent-a-handoff.md  agent-b-handoff.md  plan.md
experiments/budget_forcing/: __init__.py  decoding.py  metrics.py
experiments/data/: download_s1k.py  download_vi_benchmarks.py
experiments/evaluation/: run_eval.py  run_eval_vi.py
experiments/models/: model_loader.py
experiments/notebooks/: 01_baseline_reproduction.ipynb  02_trigger_ablation.ipynb
experiments/rag/: __init__.py  knowledge_base.py  rag_pipeline.py  retriever.py
experiments/results/: summary_vi.csv  summary_vi.md  summary_vi.py  visualize.py
experiments/results/figures/: summary_vi.csv
experiments/results/vi_20260621_155623/: summary_vi.csv  summary_vi.md  vinallama-7b__vi_gsm8k__nwait0.json  vinallama-7b__vi_gsm8k__nwait1.json  (+1 more)
experiments/scripts/: run_baseline.sh  run_budget_forcing.sh  run_phase2_generalizability.sh  run_vi_bf.sh  run_vi_bf_rag.sh
report/: main.tex  outline.md  presentation_outline.md  references.bib
report/sections/: 01_introduction.tex  02_method.tex  03_metrics.tex  04_analysis.tex  05_related_work.tex  06_experiments.tex  07_conclusion.tex
(+70 files in other folders)
