[project]
name = "s1-budget-forcing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.27.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.18.0",
    "ipywidgets>=8.1.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "peft>=0.10.0",
    "protobuf>=4.25.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
    "sentencepiece>=0.2.0",
    "torch>=2.1.0",
    "tqdm>=4.66.0",
    "transformers>=4.40.0",
]
